--- a/notebooks/D_Composites/composites.ipynb
+++ b/notebooks/D_Composites/composites.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All libraries successfully imported!\n"
+     ]
+    }
+   ],
    "source": [
     "import glob, os\n",
     "import numpy as np\n",
@@ -19,9 +27,11 @@
     "import geopandas as gpd\n",
     "import rasterio\n",
     "import rasterio.plot\n",
-    "\n",
+    "import datetime\n",
     "from pathlib import Path\n",
-    "from IPython.display import display"
+    "from IPython.display import display\n",
+    "\n",
+    "print('All libraries successfully imported!')"
    ]
   },
   {
@@ -33,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +53,9 @@
     "data_path = f'{computer_path}data/'                     # Directory with data shared by the assistant\n",
     "work_path = f'{computer_path}GROUP_{grp_letter}/WORK/'  # Directory for all work files\n",
     "\n",
-    "# Input directories\n",
-    "ndvi_path    = f'{work_path}NDVI/'\n",
+    "# Image timeserie directory\n",
+    "ts_path = f'{work_path}NDVI/'\n",
+    "raster_file_list = sorted(glob.glob(f'{ts_path}*.tif'))\n",
     "\n",
     "# Output directory\n",
     "composite_path = f'{work_path}COMPOSITE/'\n",
@@ -58,7 +69,7 @@
    "source": [
     "## Set parameters\n",
     "\n",
-    "Method :\n",
+    "Compositing method :\n",
     "- mean\n",
     "- median\n",
     "- maximum\n",
@@ -67,11 +78,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "method = 'minimum'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Date\n",
+    "The date must be in each image filename. `begin_date` is the first position of the date\n",
+    "\n",
+    "E.g. : \"SITE_3_**2**0181108_NDVI.tif\" --> **begin_date = 8**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "format     = '%Y%m%d' # format : YYYYMMDD\n",
+    "begin_date = 8"
    ]
   },
   {
@@ -83,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,8 +122,240 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get dataframe with all images\n",
+    "- date of acquisition\n",
+    "- file path"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>im_path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-16</td>\n",
+       "      <td>/export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-02-12</td>\n",
+       "      <td>/export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-03-16</td>\n",
+       "      <td>/export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-04-17</td>\n",
+       "      <td>/export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-05-20</td>\n",
+       "      <td>/export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020-06-21</td>\n",
+       "      <td>/export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2020-07-19</td>\n",
+       "      <td>/export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2020-08-13</td>\n",
+       "      <td>/export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2020-09-14</td>\n",
+       "      <td>/export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2020-10-19</td>\n",
+       "      <td>/export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2020-11-18</td>\n",
+       "      <td>/export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2020-12-18</td>\n",
+       "      <td>/export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          date                                            im_path\n",
+       "0   2020-01-16  /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...\n",
+       "1   2020-02-12  /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...\n",
+       "2   2020-03-16  /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...\n",
+       "3   2020-04-17  /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...\n",
+       "4   2020-05-20  /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...\n",
+       "5   2020-06-21  /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...\n",
+       "6   2020-07-19  /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...\n",
+       "7   2020-08-13  /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...\n",
+       "8   2020-09-14  /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...\n",
+       "9   2020-10-19  /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...\n",
+       "10  2020-11-18  /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...\n",
+       "11  2020-12-18  /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/..."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dict_list = []\n",
+    "\n",
+    "for im in raster_file_list:\n",
+    "            \n",
+    "        date_str = os.path.basename(im)[begin_date-1:begin_date-1+8]\n",
+    "\n",
+    "        date_im = datetime.datetime.strptime(date_str, format).date()\n",
+    "\n",
+    "        dict_list.append({'date': date_im,\n",
+    "                          'im_path': im})\n",
+    "\n",
+    "im_date_path_df = pd.DataFrame.from_dict(dict_list).sort_values('date')\n",
+    "\n",
+    "display(im_date_path_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Select images inside a period"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>im_path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-16</td>\n",
+       "      <td>/export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-02-12</td>\n",
+       "      <td>/export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-03-16</td>\n",
+       "      <td>/export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-04-17</td>\n",
+       "      <td>/export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-05-20</td>\n",
+       "      <td>/export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date                                            im_path\n",
+       "0  2020-01-16  /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...\n",
+       "1  2020-02-12  /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...\n",
+       "2  2020-03-16  /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...\n",
+       "3  2020-04-17  /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/...\n",
+       "4  2020-05-20  /export/miro/ndeffense/LBRAT2104/GROUP_X/WORK/..."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "start_date = datetime.datetime.strptime('20200101', format).date()\n",
+    "end_date   = datetime.datetime.strptime('20200601', format).date()\n",
+    "\n",
+    "mask = (im_date_path_df['date'] > start_date) & (im_date_path_df['date'] <= end_date)\n",
+    "\n",
+    "im_date_path_df = im_date_path_df.loc[mask]\n",
+    "\n",
+    "display(im_date_path_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -100,52 +363,50 @@
      "output_type": "stream",
      "text": [
       "Shape of features : (570, 986)\n",
-      "Number of features : 12\n"
+      "Number of features : 5\n"
      ]
     }
    ],
    "source": [
     "list_src_arr = []\n",
     "\n",
-    "list_im = sorted(glob.glob(f'{ndvi_path}*.tif'))\n",
-    "\n",
-    "for im_file in list_im:\n",
-    "\n",
+    "for i, row in im_date_path_df.iterrows():\n",
+    "    im_file    = row['im_path']\n",
     "    src = rasterio.open(im_file, \"r\")\n",
-    "    im = src.read(1)\n",
-    "    list_src_arr.append(im)\n",
+    "    im_arr = src.read(1)\n",
+    "    list_src_arr.append(im_arr)\n",
     "    src.close()\n",
     "    \n",
-    "print(f'Shape of features : {im.shape}')\n",
+    "print(f'Shape of features : {im_arr.shape}')\n",
     "print(f'Number of features : {len(list_src_arr)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(570, 986, 12)\n",
-      "There are 12 features\n",
+      "(570, 986, 5)\n",
+      "There are 5 features\n",
       "The features type is : float64\n"
      ]
     }
    ],
    "source": [
-    "im_arr = np.dstack(list_src_arr)\n",
+    "im_arr_stack = np.dstack(list_src_arr)\n",
     "\n",
-    "print(im_arr.shape)\n",
-    "print(f'There are {im_arr.shape[2]} features')\n",
-    "print(f'The features type is : {im_arr.dtype}')"
+    "print(im_arr_stack.shape)\n",
+    "print(f'There are {im_arr_stack.shape[2]} features')\n",
+    "print(f'The features type is : {im_arr_stack.dtype}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -156,9 +417,9 @@
       " [0.43097239 0.43376623 0.42655262 ... 0.49025202 0.32620818 0.20146688]\n",
       " [0.43283582 0.44285215 0.44069015 ... 0.33983287 0.18755803 0.14951095]\n",
       " ...\n",
-      " [0.58860104 0.55236576 0.51199638 ... 0.11897106 0.13888889 0.13902205]\n",
-      " [0.60609911 0.56308411 0.54875177 ... 0.12505643 0.14905399 0.14137116]\n",
-      " [0.60179833 0.596366   0.58564103 ... 0.11681173 0.13850416 0.14312354]]\n"
+      " [0.59484778 0.55236576 0.55077539 ... 0.32256267 0.24806746 0.31261561]\n",
+      " [0.60609911 0.56308411 0.55648536 ... 0.32063146 0.24914676 0.25447244]\n",
+      " [0.66213314 0.596366   0.59649123 ... 0.3208756  0.23613963 0.26780627]]\n"
      ]
     },
     {
@@ -172,19 +433,19 @@
    ],
    "source": [
     "if method == 'median':\n",
-    "    compo_arr = np.nanmedian(im_arr, axis=2)\n",
+    "    compo_arr = np.nanmedian(im_arr_stack, axis=2)\n",
     "\n",
     "elif method == 'mean':\n",
-    "    compo_arr = np.nanmean(im_arr, axis=2)\n",
+    "    compo_arr = np.nanmean(im_arr_stack, axis=2)\n",
     "\n",
     "elif method == 'std':\n",
-    "    compo_arr = np.nanstd(im_arr, axis=2)\n",
+    "    compo_arr = np.nanstd(im_arr_stack, axis=2)\n",
     "\n",
     "elif method == 'minimum':\n",
-    "    compo_arr = np.nanmin(im_arr, axis=2)\n",
+    "    compo_arr = np.nanmin(im_arr_stack, axis=2)\n",
     "\n",
     "elif method == 'maximum':\n",
-    "    compo_arr = np.nanmax(im_arr, axis=2)\n",
+    "    compo_arr = np.nanmax(im_arr_stack, axis=2)\n",
     "\n",
     "else:\n",
     "    print(f'Method not available !')\n",
@@ -194,20 +455,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'driver': 'GTiff', 'dtype': 'float64', 'nodata': -10000.0, 'width': 986, 'height': 570, 'count': 1, 'crs': CRS({'init': 'epsg:32631'}), 'transform': Affine(10.0, 0.0, 627260.0,\n",
+      "{'driver': 'GTiff', 'dtype': 'float64', 'nodata': -10000.0, 'width': 986, 'height': 570, 'count': 1, 'crs': CRS.from_epsg(32631), 'transform': Affine(10.0, 0.0, 627260.0,\n",
       "       0.0, -10.0, 5596180.0), 'tiled': False, 'compress': 'lzw', 'interleave': 'band'}\n"
      ]
     }
    ],
    "source": [
-    "img_temp_tif = list_im[0]\n",
+    "img_temp_tif = raster_file_list[0]\n",
     "\n",
     "with rasterio.open(img_temp_tif) as src:\n",
     "    profile = src.profile\n",
