--- a/notebooks/Help_students/download_images_LSA.ipynb
+++ b/notebooks/Help_students/download_images_LSA.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import subprocess\n",
+    "import subprocess, glob, os\n",
     "from pathlib import Path\n"
    ]
   },
@@ -89,6 +89,106 @@
     "\n",
     "#subprocess.call(cmd, shell=True)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['20210113',\n",
+       " '20210118',\n",
+       " '20210123',\n",
+       " '20210202',\n",
+       " '20210207',\n",
+       " '20210212',\n",
+       " '20210227',\n",
+       " '20210309',\n",
+       " '20210319',\n",
+       " '20210513',\n",
+       " '20210528',\n",
+       " '20210607',\n",
+       " '20210707',\n",
+       " '20210712',\n",
+       " '20210811',\n",
+       " '20210816',\n",
+       " '20210826',\n",
+       " '20211119',\n",
+       " '20211209']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "date_list = []\n",
+    "\n",
+    "for im in glob.glob('/scratch/ndeffense/dwl_student/GROUP_N/*.zip'):\n",
+    "    \n",
+    "    name = os.path.basename(im)\n",
+    "        \n",
+    "    date = name[11:11+8]\n",
+    "    \n",
+    "    date_list.append(date)\n",
+    "    \n",
+    "display(sorted(date_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['20210113',\n",
+       " '20210202',\n",
+       " '20210207',\n",
+       " '20210212',\n",
+       " '20210227',\n",
+       " '20210309',\n",
+       " '20210319',\n",
+       " '20210513',\n",
+       " '20210528',\n",
+       " '20210607',\n",
+       " '20210707',\n",
+       " '20210811',\n",
+       " '20210816',\n",
+       " '20210826',\n",
+       " '20211119',\n",
+       " '20211204',\n",
+       " '20211209']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "date_list = []\n",
+    "\n",
+    "\n",
+    "for im in glob.glob('/export/miro/ndeffense/SHARE/L2A_student/GROUP_N/*.zip'):\n",
+    "    \n",
+    "    name = os.path.basename(im)\n",
+    "    \n",
+    "    date = name[11:11+8]\n",
+    "    \n",
+    "    date_list.append(date)\n",
+    "    \n",
+    "display(sorted(date_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
