--- a/notebooks/E_Reclassify/reclassify_by_interval.ipynb
+++ b/notebooks/E_Reclassify/reclassify_by_interval.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
     "\n",
     "dtype_out = 'int16'\n",
     "\n",
-    "print(interval)\n"
+    "print(interval)"
    ]
   },
   {
@@ -105,44 +105,6 @@
     "If values in `x` are beyond the bounds of `bins`, 0 or ``len(bins)`` is returned as appropriate.\n",
     "\n",
     "https://numpy.org/doc/stable/reference/generated/numpy.digitize.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Example"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original continuous values : [ 1.2 10.  12.4 15.5 20. ]\n",
-      "Interval : [ 0  5 10 15 20]\n",
-      "Reclassified discrete values : \n",
-      "[1 2 3 4 4]\n",
-      "[1 3 3 4 5]\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = np.array([1.2, 10.0, 12.4, 15.5, 20.])\n",
-    "bins = np.array([0, 5, 10, 15, 20])\n",
-    "\n",
-    "inds_right_true = np.digitize(x,bins,right=True)\n",
-    "inds_right_false = np.digitize(x,bins,right=False)\n",
-    "\n",
-    "print(f'Original continuous values : {x}')\n",
-    "print(f'Interval : {bins}')\n",
-    "print('Reclassified discrete values : ')\n",
-    "print(inds_right_true)\n",
-    "print(inds_right_false)"
    ]
   },
   {
@@ -202,6 +164,44 @@
     "\n",
     "src.close()\n",
     "dst.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original continuous values : [ 1.2 10.  12.4 15.5 20. ]\n",
+      "Interval : [ 0  5 10 15 20]\n",
+      "Reclassified discrete values : \n",
+      "[1 2 3 4 4]\n",
+      "[1 3 3 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([1.2, 10.0, 12.4, 15.5, 20.])\n",
+    "bins = np.array([0, 5, 10, 15, 20])\n",
+    "\n",
+    "inds_right_true = np.digitize(x,bins,right=True)\n",
+    "inds_right_false = np.digitize(x,bins,right=False)\n",
+    "\n",
+    "print(f'Original continuous values : {x}')\n",
+    "print(f'Interval : {bins}')\n",
+    "print('Reclassified discrete values : ')\n",
+    "print(inds_right_true)\n",
+    "print(inds_right_false)"
    ]
   }
  ],
