help and install

--- a/notebooks/A_Zonal_Statistics/zonal_stats_categorical.ipynb
+++ b/notebooks/A_Zonal_Statistics/zonal_stats_categorical.ipynb
@@ -656,7 +656,7 @@
    "source": [
     "df['percent'] = ((df.iloc[:,0]/ df.iloc[:,0].sum())*100).round(2)\n",
     "\n",
-    "display(df)"
+    "display(df)\n"
    ]
   },
   {
