--- a/notebooks/Help_students/download_images_LSA.ipynb
+++ b/notebooks/Help_students/download_images_LSA.ipynb
@@ -2,32 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import subprocess, glob, os\n",
-    "from pathlib import Path\n"
+    "from pathlib import Path\n",
+    "import datetime\n",
+    "from datetime import timedelta\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "prod_list = ['S1_SAR_RAW', 'S1_SAR_GRD', 'S1_SAR_SLC', 'S1_SAR_OCN', 'S2_MSIL1C', 'S2_MSIL2A']\n",
     "\n",
-    "prod_type = 'S2_MSIL2A'\n",
+    "#prod_type = 'S2_MSIL2A'\n",
     "prod_type = 'S2_MSIL1C'\n",
     "\n",
-    "grp = 'N'\n",
+    "grp = 'U'\n",
     "\n",
     "if not prod_type in prod_list:\n",
     "    print(\"ERROR\")\n",
     "\n",
     "\n",
-    "dwl_dir = f'/scratch/ndeffense/dwl_student/GROUP_{grp}/'\n",
+    "dwl_dir = f'/scratch/ndeffense/dwl_student/GROUP_{grp}/{prod_type}/'\n",
     "Path(dwl_dir).mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "\n",
@@ -59,7 +61,16 @@
     "\n",
     "    pct_clouds = '30'\n",
     "\n",
-    "flag_list = True"
+    "elif grp == 'U':\n",
+    "\n",
+    "    start = '2021-04-20'\n",
+    "    end   = '2021-09-17'\n",
+    "    \n",
+    "    bbox = '3.5 50.7 4.0 51.1'\n",
+    "\n",
+    "    pct_clouds = '100'\n",
+    "\n",
+    "flag_list = False"
    ]
   },
   {
@@ -71,7 +82,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "py /export/miro/ndeffense/CODE/enge/projects/enge/dwl_specific/sentinel_lsa_dwl.py -o /scratch/ndeffense/dwl_student/GROUP_N/ S2_MSIL1C 2021-01-01 2021-12-31 -c 30 -b 24.8669 0.9420 25.0443 1.0881 -l\n"
+      "py /export/miro/ndeffense/CODE/enge/projects/enge/dwl_specific/sentinel_lsa_dwl.py -o /scratch/ndeffense/dwl_student/GROUP_U/S2_MSIL2A/ S2_MSIL2A 2021-04-20 2021-09-17 -c 30 -b 3.5 50.7 4.0 51.1 -l\n"
      ]
     }
    ],
@@ -88,6 +99,66 @@
     "print(cmd)\n",
     "\n",
     "#subprocess.call(cmd, shell=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['python3 /export/miro/ndeffense/CODE/enge/projects/enge/dwl_specific/sentinel_lsa_dwl.py -o /scratch/ndeffense/dwl_student/GROUP_U/S2_MSIL1C/ S2_MSIL1C 2021-04-20 2021-04-21 -c 100 -b 3.5 50.7 4.0 51.1', 'python3 /export/miro/ndeffense/CODE/enge/projects/enge/dwl_specific/sentinel_lsa_dwl.py -o /scratch/ndeffense/dwl_student/GROUP_U/S2_MSIL1C/ S2_MSIL1C 2021-04-25 2021-04-26 -c 100 -b 3.5 50.7 4.0 51.1', 'python3 /export/miro/ndeffense/CODE/enge/projects/enge/dwl_specific/sentinel_lsa_dwl.py -o /scratch/ndeffense/dwl_student/GROUP_U/S2_MSIL1C/ S2_MSIL1C 2021-05-05 2021-05-06 -c 100 -b 3.5 50.7 4.0 51.1', 'python3 /export/miro/ndeffense/CODE/enge/projects/enge/dwl_specific/sentinel_lsa_dwl.py -o /scratch/ndeffense/dwl_student/GROUP_U/S2_MSIL1C/ S2_MSIL1C 2021-05-30 2021-05-31 -c 100 -b 3.5 50.7 4.0 51.1', 'python3 /export/miro/ndeffense/CODE/enge/projects/enge/dwl_specific/sentinel_lsa_dwl.py -o /scratch/ndeffense/dwl_student/GROUP_U/S2_MSIL1C/ S2_MSIL1C 2021-06-09 2021-06-10 -c 100 -b 3.5 50.7 4.0 51.1', 'python3 /export/miro/ndeffense/CODE/enge/projects/enge/dwl_specific/sentinel_lsa_dwl.py -o /scratch/ndeffense/dwl_student/GROUP_U/S2_MSIL1C/ S2_MSIL1C 2021-06-14 2021-06-15 -c 100 -b 3.5 50.7 4.0 51.1', 'python3 /export/miro/ndeffense/CODE/enge/projects/enge/dwl_specific/sentinel_lsa_dwl.py -o /scratch/ndeffense/dwl_student/GROUP_U/S2_MSIL1C/ S2_MSIL1C 2021-07-19 2021-07-20 -c 100 -b 3.5 50.7 4.0 51.1', 'python3 /export/miro/ndeffense/CODE/enge/projects/enge/dwl_specific/sentinel_lsa_dwl.py -o /scratch/ndeffense/dwl_student/GROUP_U/S2_MSIL1C/ S2_MSIL1C 2021-08-03 2021-08-04 -c 100 -b 3.5 50.7 4.0 51.1', 'python3 /export/miro/ndeffense/CODE/enge/projects/enge/dwl_specific/sentinel_lsa_dwl.py -o /scratch/ndeffense/dwl_student/GROUP_U/S2_MSIL1C/ S2_MSIL1C 2021-08-08 2021-08-09 -c 100 -b 3.5 50.7 4.0 51.1', 'python3 /export/miro/ndeffense/CODE/enge/projects/enge/dwl_specific/sentinel_lsa_dwl.py -o /scratch/ndeffense/dwl_student/GROUP_U/S2_MSIL1C/ S2_MSIL1C 2021-08-13 2021-08-14 -c 100 -b 3.5 50.7 4.0 51.1', 'python3 /export/miro/ndeffense/CODE/enge/projects/enge/dwl_specific/sentinel_lsa_dwl.py -o /scratch/ndeffense/dwl_student/GROUP_U/S2_MSIL1C/ S2_MSIL1C 2021-09-02 2021-09-03 -c 100 -b 3.5 50.7 4.0 51.1', 'python3 /export/miro/ndeffense/CODE/enge/projects/enge/dwl_specific/sentinel_lsa_dwl.py -o /scratch/ndeffense/dwl_student/GROUP_U/S2_MSIL1C/ S2_MSIL1C 2021-09-12 2021-09-13 -c 100 -b 3.5 50.7 4.0 51.1', 'python3 /export/miro/ndeffense/CODE/enge/projects/enge/dwl_specific/sentinel_lsa_dwl.py -o /scratch/ndeffense/dwl_student/GROUP_U/S2_MSIL1C/ S2_MSIL1C 2021-09-07 2021-09-08 -c 100 -b 3.5 50.7 4.0 51.1', 'python3 /export/miro/ndeffense/CODE/enge/projects/enge/dwl_specific/sentinel_lsa_dwl.py -o /scratch/ndeffense/dwl_student/GROUP_U/S2_MSIL1C/ S2_MSIL1C 2021-09-17 2021-09-18 -c 100 -b 3.5 50.7 4.0 51.1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_date = [\n",
+    "    20210420,\n",
+    "    20210425,\n",
+    "    20210505,\n",
+    "    20210530,\n",
+    "    20210609,\n",
+    "    20210614,\n",
+    "    20210719,\n",
+    "    20210803,\n",
+    "    20210808,\n",
+    "    20210813,\n",
+    "    20210902,\n",
+    "    20210912,\n",
+    "    20210907,\n",
+    "    20210917]\n",
+    "\n",
+    "list_cmd = []\n",
+    "\n",
+    "for date in list_date:\n",
+    "    \n",
+    "    date = str(date)\n",
+    "    start = f'{date[0:4]}-{date[4:6]}-{date[6:8]}'\n",
+    "    \n",
+    "    start_date = datetime.datetime.strptime(start, '%Y-%m-%d')\n",
+    "    #print(start_date)\n",
+    "    \n",
+    "    end_date = start_date + timedelta(days=1) \n",
+    "    end_date = end_date.strftime('%Y-%m-%d')\n",
+    "    #print(end_date)\n",
+    "        \n",
+    "    cmd = 'python3 /export/miro/ndeffense/CODE/enge/projects/enge/dwl_specific/sentinel_lsa_dwl.py'\n",
+    "    cmd += f' -o {dwl_dir}'\n",
+    "    cmd += f' {prod_type}'\n",
+    "    cmd += f' {start} {end_date}'\n",
+    "    cmd += f' -c {pct_clouds}'\n",
+    "    cmd += f' -b {bbox}'\n",
+    "    if flag_list:\n",
+    "        cmd += ' -l'\n",
+    "        \n",
+    "    list_cmd.append(cmd)\n",
+    "    \n",
+    "    #print(cmd)\n",
+    "    \n",
+    "print(list_cmd)"
    ]
   },
   {
