--- a/notebooks/3_In_situ_data/in_situ_data.ipynb
+++ b/notebooks/3_In_situ_data/in_situ_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -17,7 +17,7 @@
      "output_type": "stream",
      "text": [
       "All libraries successfully imported!\n",
-      "Pandas    : 1.1.5\n",
+      "Pandas    : 1.4.2\n",
       "GeoPandas : 0.9.0\n"
      ]
     }
@@ -45,11 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "computer_path = '/export/miro/ndeffense/LBRAT2104/'\n",
+    "computer_path = 'H:/ndeffense/LBRAT2104/'\n",
     "grp_letter    = 'X'\n",
     "\n",
     "data_path = f'{computer_path}data/'\n",
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,6 +104,7 @@
     "\n",
     "## Look-up-Table\n",
     "sigec_lut_csv = f'{data_path}LUT/SIGEC_Sen4Stat_LUT.csv'\n",
+    "sigec_lut_xls = f'{data_path}LUT/SIGEC_Sen4Stat_LUT.xlsx'\n",
     "s4s_lut_csv   = f'{data_path}LUT/crop_dictionary_new.csv'\n",
     "\n",
     "# OUTPUT\n",
@@ -132,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -615,9 +617,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>code_name</th>\n",
+       "      <th>sub_nb</th>\n",
+       "      <th>sub</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>99</td>\n",
+       "      <td>Autres</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9584</td>\n",
+       "      <td>Plantes ornementales d'hiver</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>311</td>\n",
+       "      <td>Froment d'hiver</td>\n",
+       "      <td>1111</td>\n",
+       "      <td>Winter wheat</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>312</td>\n",
+       "      <td>Froment de printemps</td>\n",
+       "      <td>1112</td>\n",
+       "      <td>Spring wheat</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>352</td>\n",
+       "      <td>Triticale de printemps</td>\n",
+       "      <td>1115</td>\n",
+       "      <td>Triticale</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   code                     code_name  sub_nb           sub\n",
+       "0    99                        Autres       0       Unknown\n",
+       "1  9584  Plantes ornementales d'hiver       0       Unknown\n",
+       "2   311               Froment d'hiver    1111  Winter wheat\n",
+       "3   312          Froment de printemps    1112  Spring wheat\n",
+       "4   352        Triticale de printemps    1115     Triticale"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -701,8 +782,11 @@
    "source": [
     "# Open LUT file\n",
     "sigec_lut_df = pd.read_csv(sigec_lut_csv, sep=';')\n",
+    "sigec_lut_df_1 = pd.read_excel(sigec_lut_xls)\n",
     "\n",
-    "display(sigec_lut_df.head())"
+    "\n",
+    "display(sigec_lut_df.head())\n",
+    "display(sigec_lut_df_1.head())"
    ]
   },
   {
@@ -1661,7 +1745,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1675,7 +1759,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
